--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     $("#divSpecimenData").html("<h4 class='text-center'>Attributes</h4><h5>Status: "+att.Specimen+"</h5>");
                     $("#divSpecimenError").html("");
                 } else {
-                    $("#divSpecimenError").html("**** Eagle Nest ID not found ****");
+                    $("#divSpecimenError").html("**** Specimen not found ****");
                 }
             });
             
